# Connectify-New

./: .gitignore  CMakeLists.txt  CMakePresets.json  Connectify-New.txt  ConnectifyUI.txt  LoginPage.cpp  LoginPage.h  README.md  admindashboard.cpp  admindashboard.h  app.rc  data.json  main.cpp  mainwindow.cpp  mainwindow.h  messagepage.cpp  messagepage.h  newsfeedpage.cpp  newsfeedpage.h  notificationpage.cpp  notificationpage.h  notifications.txt  profilepage.cpp  profilepage.h  run.ps1  searchpage.cpp  searchpage.h  signuppage.cpp  signuppage.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
Backend/: main.cpp  message.cpp  notification.cpp  post.cpp  search.cpp  user.cpp  user.h
File Handling/: .gitkeep
FrontEnd(QT GUI)/: .gitkeep
backend/: main.cpp  message.cpp  notification.cpp  post.cpp  user.cpp  user.h
backend/include/: user.h
backend/src/: post.cpp  search.cpp  user.cpp
docs/: ARCHITECTURE.md  BUILD.md  BUILD_AND_RUN.md  CLASSES.md  CLASS_REFERENCE.md  CONTRIBUTING.md  DATA_FORMAT.md  DATA_STRUCTURES.md  FEATURES.md  LICENSE  OOP_CONCEPTS.md  QT_SIGNALS_AND_SLOTS.md  Qt_FUNDAMENTALS.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md
filehandling/: filehandling.cpp  notifications.txt  relations.txt  users.txt
frontend/integration/: mainwindow_integration.h
frontend/pages/: LoginPage.cpp  LoginPage.h  admindashboard.cpp  mainwindow.cpp  mainwindow.h  messagepage.cpp  messagepage.h  newsfeedpage.cpp  newsfeedpage.h  notificationpage.cpp  profilepage.h
frontend/styles/: style.qss
image/: ImagePostUploader.cpp  ImagePostUploader.h  ImagePostUploadermain.cpp
